# JupiterMag

./: .flake8  .gitignore  .gitmodules  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  update-submodules.sh
.github/workflows/: ci.yml  release.yml
JupiterMag/: Con2020Field.py  Globals.py  InternalField.py  ModelField.py  TraceField.py  _CFunctions.py  _CppLib.py  __init__.py  _ptr2D.py  ct.py
JupiterMag/Con2020/: Config.py  Field.py  Test.py  _CFunctions.py  _ReadTestData.py  __init__.py
JupiterMag/CoordConv/: MagtoSIII.py  SIIItoMag.py  __init__.py
JupiterMag/Internal/: Config.py  Field.py  Test.py  _CFunctions.py  _ReadTestPos.py  __init__.py
JupiterMag/JRM09/: Config.py  Field.py  Test.py  _CFunctions.py
JupiterMag/Tools/: GetLegendHandLab.py  JupiterOval.py  PlotJupiter.py  Python.py  TestPigtail.py  TestTrace.py  Timer.py  __init__.py
JupiterMag/VIP4/: Config.py  Field.py  Test.py  _CFunctions.py  __init__.py
JupiterMag/__data/libjupitermag/: compile.bat  interptraceclosestpos.cc  interptraceclosestpos.h  libjupitermag.cc  libjupitermag.h  makefile  model.cc  model.h  test  test.cc  test.h  trace.cc  trace.h  traceclosestpos.cc  traceclosestpos.h
JupiterMag/__data/libjupitermag-old/: interptraceclosestpos.cc  interptraceclosestpos.h  makefile  model.cc  trace.h  traceclosestpos.cc
JupiterMag/__data/libjupitermag-old/con2020/: bessel.cc  bessel.h  clip.h  compile.bat  con2020.cc  con2020.h  libcon2020.cc  libcon2020.h  makefile  polyeval.h  sgn.h  test.cc  test.h  trap.cc
JupiterMag/__data/libjupitermag-old/spline/: compile.bat  makefile  spline.h
JupiterMag/__data/libjupitermag/con2020/: bessel-old.h  bessel.cc  bessel.h  clip.h  compile.bat  con2020.h  (+10 more)
scripts/: build-manylinux-wheel.sh
tests/: common.py  test_linting.py
tests/con2020/: test_con2020_aliases.py  test_con2020_config.py  test_con2020_config_warnings.py  test_con2020_data.py
tests/coordconv/: test_coordconv_data.py  test_coordconv_roundtrip.py
tests/data/: con2020_field_data.json  coordconv_data.json  internal_field_data.json  modelfield_data.json  trace_data.json
tests/internal/: test_internal_config.py  test_internal_data.py  test_internal_field_behavior.py
tests/modelfield/: test_common_helper_config_safety.py  test_modelfield_data.py  test_modelfield_wrapper.py
tests/savedata/: save_con2020_data.py  save_coordconv_data.py  save_internal_data.py  save_modelfield_data.py  save_trace_data.py  savedata.py
tests/tools/: test_python_helpers.py
tests/tracefield/: test_tracefield_data.py  test_tracefield_helpers.py  test_tracefield_methods.py
(+10 files in other folders)
